# orbbec_hand_detection

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
launch/: gemini2_automatic_calibration.launch.py  gemini2_pointer_tip_depth_detection_automatic_calibration.launch.py  gemini2_pointer_tip_depth_detection_depth_img_automatic_calibration.launch.py  gemini2_pointer_tip_depth_detection_launch.py  gemini336l_3node_pipeline_automatic_calibration.launch.py  gemini336l_pointer_tip_depth_detection_automatic_calibration.launch.py  mediapipe_detection_only.launch.py
msg/: HandDetection.msg  TouchDetection.msg  TouchEvent.msg
orbbec_hand_detection/: mediapipe_detection_node.py  mediapipe_webcam.py  pointer_tip_depth_publisher.py  pointer_tip_depth_publisher_depth_image.py  pointer_tip_depth_publisher_old.py  pointer_tip_depth_publisher_plane.py  pointer_tip_depth_publisher_plane_depth_image.py  screen_calibration_node.py  show_aruco_display_node.py  touch_detection_node.py  touch_event_publisher_node.py
rviz/: pointer_depth_config.rviz
